scratch patch for jdk-25